@@ -16,6 +16,8 @@ Version 0.9
 
 - Added 256-color terminal formatter.
 
+- Added Erlang lexer.
+
 - Added ActionScript lexer.
 
 - Added Gettext catalog lexer.
